--- a/conf/wotlk-remix.conf.dist
+++ b/conf/wotlk-remix.conf.dist
@@ -8,10 +8,35 @@
 # Wrath of the Lich King Remix configuration
 ########################################
 #
+#    SPELL AUTO LEARN
+#
 #    WotlkRemix.EnableSpellAutoLearn
-#        Description: Enable players automatically learning spells when they become eligible, no need to talk to a trainer / complete a quest
+#        Description: Enable players automatically learning spells when they become eligible, no need to talk to a trainer / complete a quest.
 #        Default:     0 - Disabled
 #                     1 - Enabled
 #
 
 WotlkRemix.EnableSpellAutoLearn = 1
+
+#
+#    INSTANT RIDING
+#
+#    WotlkRemix.EnableInstantRiding
+#        Description: Enable players immediately learning all riding skills and getting an appropriate mount when first logging in.
+#        Default:     0 - Disabled
+#                     1 - Enabled
+#
+#    WotlkRemix.InstantRidingAllianceDefaultMountSpell
+#        Description: The ID of the mount spell alliance players are granted as part of the "instant riding" feature.
+#                     Set to 0 to disable.
+#        Default:     32242 - Swift Blue Gryphon
+#
+#    WotlkRemix.InstantRidingHordeDefaultMountSpell
+#        Description: The ID of the mount spell horde players are granted as part of the "instant riding" feature.
+#                     Set to 0 to disable.
+#        Default:     32246 - Swift Red Wind Rider
+#
+
+WotlkRemix.EnableInstantRiding = 1
+WotlkRemix.InstantRidingAllianceDefaultMountSpell = 32242
+WotlkRemix.InstantRidingHordeDefaultMountSpell = 32246
